--- a/styles/globals.css
+++ b/styles/globals.css
@@ -66,6 +66,26 @@ body {
   width: 100%;
   height: 50px;
 }
+/* Header */
+.section-header .section-header-container {
+  display: flex;
+  padding: 12px 0;
+  justify-content: space-between;
+}
+h3 {
+  font-family: var(--secondary-font);
+  font-weight: 300;
+  font-size: 16px;
+}
+/* Animation Start CSS */
+.reveal h1,
+.reveal h2,
+p.text,
+.hr,
+.nav-item,
+.nav-item-two {
+  visibility: hidden;
+}
 /* Hero */
 .row {
   display: flex;
@@ -137,3 +157,6 @@ p.text {
   margin-right: 0.8em;
 }
 /* About */
+.about {
+  height: 100vh;
+}
