--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,6 +46,7 @@ p.text,
   --primary-black: #0c0c0c;
   --primary-font: Tabac;
   --secondary-font: 'Poppins';
+  --font-size: 1.3em;
 }
 /* html {
   scroll-behavior: smooth !important;
@@ -98,7 +99,7 @@ h3.section-title,
 h3.section-order {
   font-family: var(--secondary-font);
   font-weight: 300;
-  font-size: 16px;
+  font-size: var(--font-size);
 }
 /* Hero */
 .row {
@@ -109,7 +110,7 @@ h3.section-order {
   display: flex;
   align-items: center;
   width: 300px;
-  height: 140px;
+  height: 160px;
   position: relative;
 }
 .reveal:nth-child(2) {
@@ -119,17 +120,17 @@ h3.section-order {
   position: absolute;
 }
 h1.primary {
-  font-size: 5.4em;
+  font-size: 6.4em;
   font-weight: 400;
 }
 h2.secondary {
-  font-size: 3.2em;
+  font-size: 4.2em;
   font-weight: 200;
 }
 p.text {
   padding: 0.8em 0;
   font-family: var(--secondary-font);
-  font-size: 16px;
+  font-size: var(--font-size);
   font-weight: 400;
   text-transform: uppercase;
 }
@@ -157,13 +158,13 @@ p.text {
 }
 .nav-item > p {
   padding: 1em;
-  font-size: 14px;
+  font-size: var(--font-size);
   font-weight: 500;
   font-family: var(--secondary-font);
 }
 .nav-item-two > p {
   padding: 1em;
-  font-size: 14px;
+  font-size: var(--font-size);
   font-weight: 500;
   font-family: var(--secondary-font);
 }
@@ -189,7 +190,7 @@ p.text {
 }
 p.about-paragraph {
   text-transform: none;
-  font-size: 16px;
+  font-size: var(--font-size);
   font-weight: 200;
   padding-left: 20px;
   border-left: 4px solid var(--primary-color);
@@ -198,7 +199,7 @@ p.about-paragraph {
 p.project-design {
   padding: 0.8em 0;
   font-family: var(--secondary-font);
-  font-size: 16px;
+  font-size: var(--font-size);
   font-weight: 400;
   text-transform: uppercase;
   text-align: center;
@@ -310,7 +311,7 @@ a.project-link {
 /* Contact */
 .top-bar {
   width: 100%;
-  font-size: 16px;
+  font-size: var(--font-size);
   text-align: center;
   padding: 1em;
   font-style: italic;
@@ -329,7 +330,7 @@ a.project-link {
   text-transform: uppercase;
 }
 .bar .site-name {
-  font-size: 18px;
+  font-size: var(--font-size);
   align-items: center;
   font-size: 16px;
   text-transform: uppercase;
@@ -377,7 +378,7 @@ input {
   background: none;
   outline: none;
   border: none;
-  font-size: 22px;
+  font-size: var(--font-size);
   padding: 0.4em;
   width: 100%;
   color: var(--primary-color);
@@ -485,7 +486,7 @@ textarea#message::placeholder {
     height: 20px;
   }
   .socials-container .social-links a {
-    font-size: 20px;
+    font-size: 40px;
   }
   .nav-item {
     flex-direction: column;
@@ -532,5 +533,45 @@ textarea#message::placeholder {
   }
   .middle {
     font-size: 1.2rem;
+  }
+  p.text {
+    font-size: 12px;
+  }
+  p.project-design {
+    font-size: 11.9px;
+  }
+  .nav-item-two > p {
+    font-size: 14px;
+  }
+  .nav-item > p {
+    font-size: 14px;
+  }
+  p.about-paragraph {
+    font-size: 18px;
+  }
+}
+@media (max-width: 360px) {
+  p.text {
+    font-size: 11.5px;
+  }
+  h2.secondary {
+    font-size: 1.3em;
+  }
+  p.project-design {
+    font-size: 12px;
+  }
+  .nav-item {
+    height: 90px;
+  }
+  .nav-item-two {
+    height: 90px;
+  }
+}
+@media (max-width: 320px) {
+  p.text {
+    font-size: 9.5px;
+  }
+  p.project-design {
+    font-size: 10px;
   }
 }
