--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200&display=swap");
 * {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
 }
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 /* HIDDEN */
 .about-text,
@@ -19,583 +19,581 @@ p.text,
 .section-title,
 .section-order,
 .hr {
-  visibility: hidden;
-  will-change: transform, opacity;
+	visibility: hidden;
+	will-change: transform, opacity;
 }
 /* Scroll Bar */
 ::-webkit-scrollbar {
-  width: 10px;
+	width: 10px;
 }
 ::-webkit-scrollbar-track {
-  background: var(--primary-black);
+	background: var(--primary-black);
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--primary-color);
+	background: var(--primary-color);
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: var(--secondary-color);
+	background: var(--secondary-color);
 }
 /* App Globals */
 @font-face {
-  font-family: Tabac;
-  src: url('/tabac.woff2') format('woff2');
-  font-display: swap;
+	font-family: Tabac;
+	src: url("/tabac.woff2") format("woff2");
+	font-display: swap;
 }
 :root {
-  --primary-color: #fff0c0;
-  --secondary-color: #e9c64f;
-  --primary-black: #0c0c0c;
-  --primary-font: Tabac;
-  --secondary-font: 'Poppins';
-  --font-size: 1.3em;
+	--primary-color: #fff0c0;
+	--secondary-color: #e9c64f;
+	--primary-black: #0c0c0c;
+	--primary-font: Tabac;
+	--secondary-font: "Poppins";
+	--font-size: 1.3em;
 }
 /* html {
   scroll-behavior: smooth !important;
 } */
 #__next {
-  width: 95vw;
+	width: 95vw;
 }
 html,
 body {
-  display: flex;
-  justify-content: center;
-  align-self: center;
+	display: flex;
+	justify-content: center;
+	align-self: center;
 }
 body {
-  font-family: var(--primary-font);
-  font-weight: 200;
-  background-image: url('/grainBack.webp');
-  background-repeat: repeat;
-  background-size: auto;
-  color: var(--primary-color);
+	font-family: var(--primary-font);
+	font-weight: 200;
+	background-image: url("/grainBack.webp");
+	background-repeat: repeat;
+	background-size: auto;
+	color: var(--primary-color);
 }
 .wrapper {
-  width: 100%;
-  height: 100%;
-  padding: 2rem;
-  overflow-x: hidden;
+	width: 100%;
+	height: 100%;
+	padding: 2rem;
+	overflow-x: hidden;
 }
 .hr {
-  width: 100%;
-  height: 2px;
-  background: var(--primary-color);
-  will-change: transform, opacity;
-
+	width: 100%;
+	height: 2px;
+	background: var(--primary-color);
+	will-change: transform, opacity;
 }
 .hr-hero {
-  width: 100%;
-  height: 2px;
-  background: var(--primary-color);
-  will-change: transform, opacity;
-
+	width: 100%;
+	height: 2px;
+	background: var(--primary-color);
+	will-change: transform, opacity;
 }
 .white-space {
-  width: 100%;
-  height: 50px;
+	width: 100%;
+	height: 50px;
 }
 /* Header */
 .section-header .section-header-container {
-  display: flex;
-  padding: 12px 0;
-  justify-content: space-between;
+	display: flex;
+	padding: 12px 0;
+	justify-content: space-between;
 }
 h3.section-title,
 h3.section-order {
-  font-family: var(--secondary-font);
-  font-weight: 300;
-  font-size: var(--font-size);
+	font-family: var(--secondary-font);
+	font-weight: 300;
+	font-size: var(--font-size);
 }
 /* Hero */
 .row {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 .reveal {
-  display: flex;
-  align-items: center;
-  width: 300px;
-  height: 160px;
-  position: relative;
+	display: flex;
+	align-items: center;
+	width: 300px;
+	height: 160px;
+	position: relative;
 }
 .reveal:nth-child(2) {
-  justify-content: flex-end;
+	justify-content: flex-end;
 }
 .reveal h1 {
-  position: absolute;
+	position: absolute;
 }
 h1.primary {
-  font-size: 6.4em;
-  font-weight: 400;
-  font-display: swap;
+	font-size: 6.4em;
+	font-weight: 400;
+	font-display: swap;
 }
 h2.secondary {
-  font-size: 4.2em;
-  font-weight: 200;
-  font-display: swap;
+	font-size: 4.2em;
+	font-weight: 200;
+	font-display: swap;
 }
 p.text {
-  padding: 0.8em 0;
-  font-family: var(--secondary-font);
-  font-size: var(--font-size);
-  font-weight: 400;
-  text-transform: uppercase;
+	padding: 0.8em 0;
+	font-family: var(--secondary-font);
+	font-size: var(--font-size);
+	font-weight: 400;
+	text-transform: uppercase;
 }
 .nav-item {
-  width: 14em;
-  border-radius: 0 0 40px 0;
-  margin: 0.6em;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  background-color: var(--secondary-color);
-  color: var(--primary-black);
+	width: 14em;
+	border-radius: 0 0 40px 0;
+	margin: 0.6em;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+	background-color: var(--secondary-color);
+	color: var(--primary-black);
 }
 .nav-item-two {
-  width: 16em;
-  border-radius: 0 0 40px 0;
-  margin: 0.6em;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  background-color: var(--primary-color);
-  color: var(--primary-black);
+	width: 16em;
+	border-radius: 0 0 40px 0;
+	margin: 0.6em;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	align-items: flex-start;
+	background-color: var(--primary-color);
+	color: var(--primary-black);
 }
 .nav-item > p {
-  padding: 1em;
-  font-size: var(--font-size);
-  font-weight: 500;
-  font-family: var(--secondary-font);
+	padding: 1em;
+	font-size: var(--font-size);
+	font-weight: 500;
+	font-family: var(--secondary-font);
 }
 .nav-item-two > p {
-  padding: 1em;
-  font-size: var(--font-size);
-  font-weight: 500;
-  font-family: var(--secondary-font);
+	padding: 1em;
+	font-size: var(--font-size);
+	font-weight: 500;
+	font-family: var(--secondary-font);
 }
 .id {
-  margin-right: 0.8em;
+	margin-right: 0.8em;
 }
 /* About */
 .about-container {
-  width: 100%;
-  font-family: var(--secondary-font);
+	width: 100%;
+	font-family: var(--secondary-font);
 }
 .about-container::after {
-  content: '';
-  display: table;
-  clear: both;
+	content: "";
+	display: table;
+	clear: both;
 }
 .about-container .about-text {
-  width: 70%;
-  float: right;
+	width: 70%;
+	float: right;
 }
 .about-container .about-text p {
-  margin: 40px 0;
+	margin: 40px 0;
 }
 p.about-paragraph {
-  text-transform: none;
-  font-size: var(--font-size);
-  font-weight: 200;
-  padding-left: 20px;
-  border-left: 4px solid var(--primary-color);
+	text-transform: none;
+	font-size: var(--font-size);
+	font-weight: 200;
+	padding-left: 20px;
+	border-left: 4px solid var(--primary-color);
 }
 /* Projects */
 p.project-type {
-  padding: 0.8em 0;
-  font-family: var(--secondary-font);
-  font-size: var(--font-size);
-  font-weight: 400;
-  text-transform: uppercase;
-  text-align: center;
+	padding: 0.8em 0;
+	font-family: var(--secondary-font);
+	font-size: var(--font-size);
+	font-weight: 400;
+	text-transform: uppercase;
+	text-align: center;
 }
 .menu-item {
-  padding: 1.6vw 0 0 0;
-  margin: 4px;
-  position: relative;
+	padding: 1.6vw 0 0 0;
+	margin: 4px;
+	position: relative;
 }
 .menu-item-link {
-  display: inline-block;
-  cursor: pointer;
-  transition: opacity 0.4s;
-  text-transform: uppercase;
+	display: inline-block;
+	cursor: pointer;
+	transition: opacity 0.4s;
+	text-transform: uppercase;
 }
 .menu-item-link::before {
-  all: initial;
-  text-transform: uppercase;
-  position: absolute;
-  bottom: 60%;
-  left: 0;
-  pointer-events: none;
+	all: initial;
+	text-transform: uppercase;
+	position: absolute;
+	bottom: 60%;
+	left: 0;
+	pointer-events: none;
 }
 .menu-item-link:hover {
-  transition-duration: 0.1s;
-  opacity: 0;
+	transition-duration: 0.1s;
+	opacity: 0;
 }
 img.menu-item-img {
-  pointer-events: none;
-  position: absolute;
-  max-height: 600px;
-  height: 50vh;
-  width: auto;
-  opacity: 0;
-  left: 100%;
-  top: 20%;
-  transform: translate3d(calc(-100% - 6vw), -30%, 0) translate3d(0, 20px, 0);
-  z-index: 2;
+	pointer-events: none;
+	position: absolute;
+	max-height: 600px;
+	height: 50vh;
+	width: auto;
+	opacity: 0;
+	left: 100%;
+	top: 20%;
+	transform: translate3d(calc(-100% - 6vw), -30%, 0) translate3d(0, 20px, 0);
+	z-index: 2;
 }
 .menu-item-link:hover + .menu-item-img {
-  opacity: 0.99;
-  transform: translate3d(calc(-100% - 6vw), -30%, 0) rotate3d(0, 0, 1, 4deg);
-  transition: all 0.4s ease;
+	opacity: 0.99;
+	transform: translate3d(calc(-100% - 6vw), -30%, 0) rotate3d(0, 0, 1, 4deg);
+	transition: all 0.4s ease;
 }
 .menu {
-  padding: 0vh 0 0 0vh;
-  --offset: 20vw;
-  --move-initial: calc(-25% + var(--offset));
-  --move-final: calc(-50% + var(--offset));
-  font-size: 8vw;
+	padding: 0vh 0 0 0vh;
+	--offset: 20vw;
+	--move-initial: calc(-25% + var(--offset));
+	--move-final: calc(-50% + var(--offset));
+	font-size: 8vw;
 }
 .marquee {
-  position: absolute;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  pointer-events: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	pointer-events: none;
 }
 .marquee-inner {
-  width: fit-content;
-  display: flex;
-  position: relative;
-  animation: marquee 5s linear infinite;
-  animation-play-state: paused;
-  opacity: 0;
-  transition: opacity 0.1s;
-  padding: 2vw 0;
+	width: fit-content;
+	display: flex;
+	position: relative;
+	animation: marquee 5s linear infinite;
+	animation-play-state: paused;
+	opacity: 0;
+	transition: opacity 0.1s;
+	padding: 2vw 0;
 }
 .menu-item-link:hover ~ .marquee .marquee-inner {
-  animation-play-state: running;
-  opacity: 1;
-  transition-duration: 0.4s;
+	animation-play-state: running;
+	opacity: 1;
+	transition-duration: 0.4s;
 }
 .menu-item-link,
 .marquee p.marquee-text {
-  white-space: nowrap;
-  font-size: 7vw;
-  padding: 1.6vw 1vw;
-  font-weight: 900;
+	white-space: nowrap;
+	font-size: 7vw;
+	padding: 1.6vw 1vw;
+	font-weight: 900;
 }
 .marquee p.marquee-text {
-  text-transform: uppercase;
+	text-transform: uppercase;
 }
 .menu-item-info {
-  display: flex;
-  line-height: 1px;
-  padding-bottom: 20px;
-  justify-content: flex-start;
+	display: flex;
+	line-height: 1px;
+	padding-bottom: 20px;
+	justify-content: flex-start;
 }
 a.project-link {
-  font-family: var(--secondary-font);
-  font-size: 22px;
-  line-height: 12px;
-  padding-right: 40px;
-  padding-left: 10px;
+	font-family: var(--secondary-font);
+	font-size: 22px;
+	line-height: 12px;
+	padding-right: 40px;
+	padding-left: 10px;
 }
 /* SOCIALS */
 .socials-container {
-  padding: 20px 0;
+	padding: 20px 0;
 }
 .socials-container .social-links {
-  display: flex;
-  justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
 .socials-container .social-links a {
-  cursor: pointer;
-  font-size: 64px;
+	cursor: pointer;
+	font-size: 64px;
 }
 /* Contact */
 .top-bar {
-  width: 100%;
-  font-size: var(--font-size);
-  text-align: center;
-  padding: 1em;
-  font-style: italic;
+	width: 100%;
+	font-size: var(--font-size);
+	text-align: center;
+	padding: 1em;
+	font-style: italic;
 }
 .bar {
-  width: 100%;
-  height: 60px;
-  padding: 0 2em;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: 'Poppins';
-  font-weight: 400;
+	width: 100%;
+	height: 60px;
+	padding: 0 2em;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	font-family: "Poppins";
+	font-weight: 400;
 }
 .email a {
-  text-transform: uppercase;
+	text-transform: uppercase;
 }
 .bar .site-name {
-  font-size: var(--font-size);
-  align-items: center;
-  font-size: 16px;
-  text-transform: uppercase;
+	font-size: var(--font-size);
+	align-items: center;
+	font-size: 16px;
+	text-transform: uppercase;
 }
 .branding {
-  display: flex;
-  align-items: center;
-  padding: 0 20px;
+	display: flex;
+	align-items: center;
+	padding: 0 20px;
 }
 img.smile {
-  margin: 0px 16px;
+	margin: 0px 16px;
 }
 .marquee-contact {
-  width: 1000%;
-  margin: 0 auto;
-  white-space: nowrap;
-  overflow: hidden;
-  padding-top: 1.2em;
+	width: 1000%;
+	margin: 0 auto;
+	white-space: nowrap;
+	overflow: hidden;
+	padding-top: 1.2em;
 }
 .marquee-contact span.contact-span {
-  font-weight: 700;
-  text-transform: uppercase;
-  color: #f4ed6b;
-  font-size: 7em;
-  display: inline-block;
-  padding-left: -10%;
-  animation: marquee-animation 80s linear infinite;
+	font-weight: 700;
+	text-transform: uppercase;
+	color: #f4ed6b;
+	font-size: 7em;
+	display: inline-block;
+	padding-left: -10%;
+	animation: marquee-animation 80s linear infinite;
 }
 .col {
-  width: 50%;
+	width: 50%;
 }
 .contact-form {
-  padding: 0 0 20px 60px;
+	padding: 0 0 20px 60px;
 }
 .contact-section {
-  width: 100%;
-  display: flex;
+	width: 100%;
+	display: flex;
 }
 .contact-details {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 input {
-  background: none;
-  outline: none;
-  border: none;
-  font-size: var(--font-size);
-  padding: 0.4em;
-  width: 100%;
-  color: var(--primary-color);
+	background: none;
+	outline: none;
+	border: none;
+	font-size: var(--font-size);
+	padding: 0.4em;
+	width: 100%;
+	color: var(--primary-color);
 }
 input.contact-input {
-  font-family: var(--secondary-font);
-  font-weight: 300;
+	font-family: var(--secondary-font);
+	font-weight: 300;
 }
 .field {
-  border-bottom: 1px solid var(--primary-color);
+	border-bottom: 1px solid var(--primary-color);
 }
 input::placeholder {
-  color: var(--primary-color);
-  text-transform: capitalize;
-  font-size: 18px;
-  font-weight: 100;
+	color: var(--primary-color);
+	text-transform: capitalize;
+	font-size: 18px;
+	font-weight: 100;
 }
 .form-row {
-  display: flex;
-  margin: 2em 0;
+	display: flex;
+	margin: 2em 0;
 }
 .form-row:nth-child(3) {
-  margin: 0;
+	margin: 0;
 }
 textarea#message {
-  width: 100%;
-  background: none;
-  outline: none;
-  border: none;
-  color: var(--primary-color);
-  padding: 0.4em;
-  font-size: 18px;
+	width: 100%;
+	background: none;
+	outline: none;
+	border: none;
+	color: var(--primary-color);
+	padding: 0.4em;
+	font-size: 18px;
 }
 textarea#message::placeholder {
-  color: var(--primary-color);
-  font-size: 18px;
-  text-transform: capitalize;
-  font-weight: 100;
-  font-family: var(--secondary-font);
+	color: var(--primary-color);
+	font-size: 18px;
+	text-transform: capitalize;
+	font-weight: 100;
+	font-family: var(--secondary-font);
 }
 .submit {
-  width: 100%;
-  justify-content: space-between;
+	width: 100%;
+	justify-content: space-between;
 }
 .submit button {
-  border: none;
-  outline: none;
-  background: none;
-  color: var(--primary-color);
-  font-size: 60px;
-  font-family: Tabac;
-  text-transform: uppercase;
-  transition: all 300ms ease-in-out;
+	border: none;
+	outline: none;
+	background: none;
+	color: var(--primary-color);
+	font-size: 60px;
+	font-family: Tabac;
+	text-transform: uppercase;
+	transition: all 300ms ease-in-out;
 }
 .submit button:hover {
-  transform: scale(1.1);
-  cursor: pointer;
+	transform: scale(1.1);
+	cursor: pointer;
 }
 @keyframes marquee {
-  0% {
-    transform: translate3d(var(--move-initial), 0, 0);
-  }
-  100% {
-    transform: translate3d(var(--move-final), 0, 0);
-  }
+	0% {
+		transform: translate3d(var(--move-initial), 0, 0);
+	}
+	100% {
+		transform: translate3d(var(--move-final), 0, 0);
+	}
 }
 @keyframes marquee-animation {
-  0% {
-    transform: translate(0, 0);
-  }
-  100% {
-    transform: translate(-100%, 0);
-  }
+	0% {
+		transform: translate(0, 0);
+	}
+	100% {
+		transform: translate(-100%, 0);
+	}
 }
 /* MEDIA QUERIES */
 @media (max-width: 800px) {
-  h2.secondary {
-    font-size: 2.4em;
-  }
-  h1.primary {
-    font-size: 4.5em;
-  }
-  .wrapper {
-    padding: 1rem;
-  }
-  .reveal {
-    height: 120px;
-  }
-  .white-space {
-    height: 80px;
-  }
-  .socials-container .social-links a {
-    font-size: 30px;
-  }
+	h2.secondary {
+		font-size: 2.4em;
+	}
+	h1.primary {
+		font-size: 4.5em;
+	}
+	.wrapper {
+		padding: 1rem;
+	}
+	.reveal {
+		height: 120px;
+	}
+	.white-space {
+		height: 80px;
+	}
+	.socials-container .social-links a {
+		font-size: 30px;
+	}
 }
 @media (max-width: 714px) {
-  h2.secondary {
-    font-size: 2.4em;
-  }
-  h1.primary {
-    font-size: 3.3em;
-  }
-  p.text {
-    font-size: 14px;
-  }
-  .reveal {
-    margin-top: 5px;
-    height: 40px;
-  }
-  .white-space {
-    height: 20px;
-  }
-  .socials-container .social-links a {
-    font-size: 36px;
-  }
-  .nav-item {
-    flex-direction: column;
-  }
-  .row {
-    align-items: center;
-  }
-  .contact-details p {
-    font-size: 2.5em;
-  }
-  .contact-section {
-    display: flex;
-    flex-direction: column;
-  }
-  .col {
-    width: 100%;
-    height: 100%;
-    padding: 0;
-  }
-  a.project-link {
-    font-size: 14px;
-    line-height: 2px;
-  }
-  p.project-type {
-    font-size: 14px;
-  }
-  canvas {
-    height: 400px;
-    width: 400px;
-  }
+	h2.secondary {
+		font-size: 2.4em;
+	}
+	h1.primary {
+		font-size: 3.3em;
+	}
+	p.text {
+		font-size: 14px;
+	}
+	.reveal {
+		margin-top: 5px;
+		height: 40px;
+	}
+	.white-space {
+		height: 20px;
+	}
+	.socials-container .social-links a {
+		font-size: 36px;
+	}
+	.nav-item {
+		flex-direction: column;
+	}
+	.row {
+		align-items: center;
+	}
+	.contact-details p {
+		font-size: 2.5em;
+	}
+	.contact-section {
+		display: flex;
+		flex-direction: column;
+	}
+	.col {
+		width: 100%;
+		height: 100%;
+		padding: 0;
+	}
+	a.project-link {
+		font-size: 14px;
+		line-height: 2px;
+	}
+	p.project-type {
+		font-size: 14px;
+	}
+	canvas {
+		height: 400px;
+		width: 400px;
+	}
 }
 @media (max-width: 428px) {
-  h2.secondary {
-    font-size: 1.4em;
-  }
-  h1.primary {
-    font-size: 2.3em;
-  }
-  .row.intro p {
-    font-size: 9px;
-  }
-  .contact-details p {
-    font-size: 2.4em;
-  }
-  .marquee-contact span.contact-span {
-    font-size: 6em;
-  }
-  .bar {
-    padding: 0;
-  }
-  .middle {
-    font-size: 1.2rem;
-  }
-  p.text {
-    font-size: 12px;
-  }
-  p.project-type {
-    font-size: 11.9px;
-  }
-  .nav-item-two > p {
-    font-size: 14px;
-  }
-  .nav-item > p {
-    font-size: 14px;
-  }
-  p.about-paragraph {
-    font-size: 18px;
-  }
-  p.quote {
-    font-size: 16px;
-  }
+	h2.secondary {
+		font-size: 1.4em;
+	}
+	h1.primary {
+		font-size: 2.3em;
+	}
+	.row.intro p {
+		font-size: 9px;
+	}
+	.contact-details p {
+		font-size: 2.4em;
+	}
+	.marquee-contact span.contact-span {
+		font-size: 6em;
+	}
+	.bar {
+		padding: 0;
+	}
+	.middle {
+		font-size: 1.2rem;
+	}
+	p.text {
+		font-size: 12px;
+	}
+	p.project-type {
+		font-size: 11.9px;
+	}
+	.nav-item-two > p {
+		font-size: 14px;
+	}
+	.nav-item > p {
+		font-size: 14px;
+	}
+	p.about-paragraph {
+		font-size: 18px;
+	}
+	p.quote {
+		font-size: 16px;
+	}
 }
 @media (max-width: 360px) {
-  p.text {
-    font-size: 11.5px;
-  }
-  p.project-type {
-    font-size: 12px;
-  }
-  .nav-item {
-    height: 90px;
-  }
-  .nav-item-two {
-    height: 90px;
-  }
+	p.text {
+		font-size: 11.5px;
+	}
+	p.project-type {
+		font-size: 12px;
+	}
+	.nav-item {
+		height: 90px;
+	}
+	.nav-item-two {
+		height: 90px;
+	}
 }
 @media (max-width: 320px) {
-  p.text {
-    font-size: 9.5px;
-  }
-  p.project-type {
-    font-size: 10px;
-  }
+	p.text {
+		font-size: 9.5px;
+	}
+	p.project-type {
+		font-size: 10px;
+	}
 }
 @media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+	html {
+		color-scheme: dark;
+	}
 }
